# ez-rag

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  ez-rag-gui.bat  ez-rag.bat  pyproject.toml
bench/: bench_dnd5e_quality.py  bench_ohio.py  bench_ollama.py  bench_optimizations.py  cli.py  fetch_test_corpus.py  generate_pipeline_pdf.py  judge_eval.py  multi_model_html.py  multi_model_report.py  multi_model_sweep.py  ohio_html.py  ohio_questions.json  power.py  requirements.txt  run.ps1  run.py  run.sh  sysinfo.py
bench/test-corpus/: README.md  linnaean_taxonomy.md  (+3 more)
benchmark/: README.md  bench_configs.py  corpus_manifest.json  questions.json  rag_compare.py  run_benchmark.py
docs/: BENCH.md  EXAMPLES.md  HARDWARE.md  INSTALL.md  OPTIMIZATIONS.md  PDF_PIPELINE.md  PLAN_CLOUD_PROVIDERS.md  PLAN_EZ_MODE.md  PLAN_INGEST_INTELLIGENCE.md  ROADMAP.md  STATUS.md
sample_data/: README.md  curation.json  fetch.py
tests/: conftest.py  test_auto_placement.py  test_bench_orchestrator.py  test_chapters.py  test_daemon_supervisor.py  test_export_chatbot.py  test_export_sources.py  test_gpu_catalog.py  test_gpu_detect.py  test_gpu_recommend.py  test_gpu_runtime.py  test_health_check.py  test_ingest_meta.py  test_ingest_scan.py  test_llm_correct.py  test_llm_inspect.py  test_multi_gpu.py  test_ollama_errors.py  test_parsers_garbled.py  test_preview.py  test_round1_core_retrieval.py  test_round2_modifiers.py  test_round3_agent_mods.py  test_round4_ingest.py  test_round5_storage.py  test_run_manual_suite.py  test_suggestions.py  test_sysmon.py  test_unload_on_switch.py
(+54 files in other folders)
